--- a/docs/Research_Paper_Draft/main.tex
+++ b/docs/Research_Paper_Draft/main.tex
@@ -9,6 +9,7 @@
 \usepackage{xcolor}
 \usepackage{url}
 \usepackage{array}
+\usepackage[colorlinks=true, urlcolor=blue, linkcolor=blue, citecolor=blue]{hyperref}
 \usepackage{tikz}
 \usepackage{float}
 \usepackage[section]{placeins}
@@ -25,31 +26,35 @@
 
 \begin{document}
 
-\title{AI Virtual Coach with Multi-Stage Pipelines for Exercise Recognition and Pose-Based Assessment\thanks{This work involved human subjects in its research. The author(s) confirm(s) that all human subject research procedures and protocols are exempt from review board approval. Participation was voluntary, verbal informed agreement was obtained from all volunteers, and all collected data were anonymized using numerical identifiers to preserve participant privacy.}}
+\title{A Pose-Based AI Coach for Exercise Recognition and Quality Assessment
+\thanks{This work is Funded by the Science and Technology Development Fund STDF (Egypt); Project id: 51399
+- ``VERAS: Virtual Exercise Recognition and Assessment System''.}
+\thanks{This work involved human subjects in its research. The author(s) confirm(s) that all human subject research procedures and protocols are exempt from review board approval. Participation was voluntary, verbal informed agreement was obtained from all volunteers, and all collected data were anonymized using numerical identifiers to preserve participant privacy.}}
 
 \author{
-\IEEEauthorblockN{1\textsuperscript{st} Ahmed Aly}
+\IEEEauthorblockN{Ahmed Aly}
 \IEEEauthorblockA{\textit{Dept. of Computer Science and Engineering} \\
 \textit{Egypt-Japan University of Science and Technology}\\
 Alexandria, Egypt \\
 ahmed.mohammad@ejust.edu.eg}
 \and
-\IEEEauthorblockN{2\textsuperscript{nd} Al Amir Eldomiatty}
+\IEEEauthorblockN{Al Amir Eldomiatty}
 \IEEEauthorblockA{\textit{Dept. of Computer Science and Engineering} \\
 \textit{Egypt-Japan University of Science and Technology}\\
 Alexandria, Egypt \\
 alamir.eldomiatty@ejust.edu.eg}
 \and
-\IEEEauthorblockN{3\textsuperscript{rd} Zeyad Elsayed}
+\IEEEauthorblockN{Zeyad Elsayed}
 \IEEEauthorblockA{\textit{Dept. of Computer Science and Engineering} \\
 \textit{Egypt-Japan University of Science and Technology}\\
 Alexandria, Egypt \\
 zeyad.elsayed@ejust.edu.eg}
 \and
-\IEEEauthorblockN{4\textsuperscript{th} Walid Gomaa}
-\IEEEauthorblockA{\textit{Dept. of Computer Science and Engineering} \\
-\textit{Egypt-Japan University of Science and Technology}\\
+\IEEEauthorblockN{Walid Gomaa$^{1,2}$}
+\IEEEauthorblockA{$^1$\textit{Egypt-Japan University of Science and Technology}\\
 Alexandria, Egypt \\
+$^2$Faculty of Engineering, Alexandria University,\\
+Alexandria, Egypt
 walid.gomaa@ejust.edu.eg}
 }
 
@@ -57,15 +62,15 @@ walid.gomaa@ejust.edu.eg}
 
 \begin{abstract}
 We present an AI Virtual Coach composed of: (i) Exercise Recognition, (ii) Exercise Assessment, and (ii) Coaching Agent.
-The recognition module employs a systematic feature engineering approach, evolving from 19 base biomechanical features (joint angles and distances) to 37 view-specific specialized features designed to resolve persistent confusion clusters identified through multi-run experiments.
+The recognition module employs a systematic feature engineering approach, evolving from 19 base biomechanical features (joint angles and distances) to 37 view-specific specialized features fed into a Feedforward Neural Network designed to resolve persistent confusion clusters identified through multi-run experiments.
 The assessment module performs aspect-level scoring for 15 resistance-training exercises using temporal pose sequences extracted from RGB video via MediaPipe, repetition segmentation, and a compact temporal CNN regressor.
-We evaluate on a dataset of 51 volunteers (10 female, 41 male), captured simultaneously in front and side views using mobile phones.
+We evaluate on our newly collected dataset of 51 volunteers (10 female, 41 male), captured simultaneously in front and side views using mobile phones.
 Our 37-feature representation achieves 90.36\% macro F1 on side view and 86.94\% macro F1 on front view, with robust performance across all 15 exercise classes.
-We use a subject-disjoint protocol and 30 randomized runs to ensure robust evaluation.
+We use a subject-disjoint protocol and 30 randomized runs to ensure robust evaluation. This dataset represents a major contribution to the field of pose-based exercise assessment.
 \end{abstract}
 
 \begin{IEEEkeywords}
-Virtual coach, pose estimation, exercise recognition, action quality assessment, exercise assessment, Neural Network Applications, temporal CNN, rep segmentation, MediaPipe
+Virtual coach,  exercise recognition, action quality assessment, exercise assessment, Neural Network Applications, Industrial Applications, Interpretable and Explainable AI, rep segmentation, pose estimation, temporal CNN
 \end{IEEEkeywords}
 
 \section{Introduction}
@@ -81,7 +86,8 @@ Recent progress in computer vision has enabled reliable \emph{exercise recogniti
 A further challenge is that deployable systems must operate in uncontrolled settings: consumer RGB video with varying camera placement, lighting, and occlusions. In small, real-world datasets, reliable evaluation is also difficult because performance can vary substantially across random initializations and subject splits. Finally, in many fitness datasets (including ours), supervision is available at the \emph{set/video level} (one label per volunteer per exercise set), not per repetition, which requires models to reconcile repetition-level inputs with subject-level targets~\cite{vcoach, cameracoach}.
 
 \par 
-In this work, we study whether a lightweight, pose-based, multi-stage pipeline can provide practical assessment from consumer video under limited data. We propose an AI Virtual Coach composed of (i) an \emph{exercise recognition} model to identify the performed exercise, and (ii) an \emph{exercise assessment} model that predicts five aspect-level scores (0--10). The assessment module extracts temporal pose features, explicitly segments repetitions using exercise/view-specific biomechanical signals, encodes repetitions with a compact temporal CNN, and aggregates multiple repetitions into a subject-level representation aligned with set-level labels.\wg{is that what u actually did? as per our discussion it seemed different!!} We evaluate on a dataset of 51 volunteers performing 15 resistance-training exercises, recorded simultaneously from front and side viewpoints, and annotated by two certified coaches.
+    In this work, we study whether a lightweight, pose-based, multi-stage pipeline can provide practical assessment from consumer video under limited data. We propose an AI Virtual Coach composed of (i) an \emph{exercise recognition} model to identify the exercise performed, and (ii) an \emph{exercise assessment} model that predicts five aspect-level scores (0--10). The assessment module extracts temporal pose features, segments repetitions using exercise/view-specific biomechanical signals, encodes each repetition with a compact temporal CNN, and aggregates multiple repetition embeddings into a subject-level representation aligned with set-level labels; it then predicts \emph{five aspect-specific scores} on the 0--10 scale (one score per assessment criterion).
+ We evaluate on a dataset of 51 volunteers performing 15 resistance-training exercises, recorded simultaneously from front and side viewpoints, and annotated by two certified coaches.
 
 \par 
 Our central research question is: \emph{Can explicit repetition modeling (segmentation and aggregation) combined with compact pose-based temporal modeling enable consistent, aspect-level exercise assessment from consumer RGB video, and how do front and side viewpoints compare under a subject-disjoint evaluation protocol?} Answering this question contributes evidence toward deployable virtual coaching in realistic gym settings, and provides a reproducible evaluation protocol for small fitness-assessment datasets.
@@ -204,7 +210,7 @@ Given an input video, we extract 3D pose landmarks for each frame using MediaPip
 
 \par 
 \textbf{Stage 2: Exercise Recognition.}
-The temporal pose features are passed to an MLP classifier that identifies which of the 15 supported exercises is being performed. The predicted exercise class determines which exercise-specific assessment model to invoke, enabling specialized evaluation tailored to each movement's biomechanics.
+The temporal pose features are passed to a Feedforward Neural Network classifier that identifies which of the 15 supported exercises is being performed. The predicted exercise class determines which exercise-specific assessment model to invoke, enabling specialized evaluation tailored to each movement's biomechanics.
 
 \par 
 \textbf{Stage 3: Per-Repetition Assessment.}
@@ -212,11 +218,11 @@ Based on the recognized exercise, the corresponding assessment model (one of 15 
 
 \par 
 \textbf{Stage 4: Coaching Agent.}
-The per-rep assessment scores, along with exercise-specific evaluation criteria, are passed to a stateful coaching agent implemented using LangGraph. The agent performs rule-based trend analysis to detect fatigue (by comparing early vs.\ late reps), computes a consistency score (inverse of score variance), and identifies the strongest and weakest aspects. These analytical results, together with the detailed per-rep breakdown, are then passed to a large language model (Google Gemini 2.5 Flash) that generates personalized, actionable coaching feedback in natural language. The final output includes aggregated scores, trend indicators, fatigue warnings, and a conversational feedback summary suitable for display in a mobile application.\wg{u need to give a sample of the output from llm later in the paper}
+The per-rep assessment scores, along with exercise-specific evaluation criteria, are passed to a stateful coaching agent implemented using LangGraph. The agent performs rule-based trend analysis to detect fatigue (by comparing early vs.\ late reps), computes a consistency score (inverse of score variance), and identifies the strongest and weakest aspects. These analytical results, together with the detailed per-rep breakdown, are then passed to a large language model (Google Gemini 2.5 Flash) that generates personalized, actionable coaching feedback in natural language. The final output includes aggregated scores, trend indicators, fatigue warnings, and a conversational feedback summary suitable for display in a mobile application.
 
 \begin{figure*}[t]
 \centering
-\begin{tikzpicture}[
+\begin{tikzpicture}[scale=0.95, transform shape,
     font=\sffamily\scriptsize,
     node distance=4mm,
     box/.style={
@@ -286,7 +292,7 @@ The per-rep assessment scores, along with exercise-specific evaluation criteria,
 \end{scope}
 
 % ===== ROW 2: Stage 4 =====
-\node[box, below=12mm of rep] (agent) {LangGraph\\Agent};
+\node[box, below=12mm of rep] (agent) {LangGraph\\Coaching Agent};
 \node[data, left=of agent] (crit) {Exercise\\Criteria};
 \node[box, right=of agent, fill=green!8] (llm) {Gemini\\LLM};
 \node[data, right=of llm, minimum width=20mm] (out) {Coaching Output\\Scores $\cdot$ Advice};
@@ -424,7 +430,7 @@ timeseries of biomechanical features over 50 timesteps. A feedforward neural net
 \subsubsection{Training protocol}
 
 \par 
-The model was trained using the Adam optimizer with a learning rate of $8 \times 10^{-5}$ and a batch size of 16. We utilize a stratified 3-way subject-independent split, ensuring that training, validation, and test sets contain data from strictly different participants (\textbf{subject-disjoint}) to prevent data leakage. Training was conducted for a maximum of 200 epochs with early stopping monitoring validation loss, using a patience of 15 epochs and restoring the best weights upon convergence. Learning rate reduction on plateau was enabled with a factor of 0.5 and a patience of 10 epochs. The loss function was sparse categorical cross-entropy, and both accuracy and macro-averaged F1 score were monitored during training.
+The model was trained using the Adam optimizer with a learning rate of $8 \times 10^{-5}$ and a batch size of 16. We utilize a stratified 3-way subject-independent split, ensuring that training, validation, and test sets contain data from strictly different participants (\textbf{subject-disjoint}) to test true generalization to unseen subjects. Training was conducted for a maximum of 200 epochs with early stopping monitoring validation loss, using a patience of 15 epochs and restoring the best weights upon convergence. Learning rate reduction on plateau was enabled with a factor of 0.5 and a patience of 10 epochs. The loss function was sparse categorical cross-entropy, and both accuracy and macro-averaged F1 score were monitored during training.
 
 \subsection{Assessment Module}
 
@@ -448,7 +454,7 @@ This produces a variable number of repetitions $N_{\text{reps}}$ per video.
 \subsubsection{Subject-level aggregation of multiple repetitions}
 
 \par 
-Because labels are provided at the set/video level (not per repetition), we aggregate multiple repetitions from the same volunteer into a single subject-level sample. Each repetition window is first encoded into an embedding $e_r \in \mathbb{R}^d$.\wg{how do u generate this embedding?} We then perform masked attention pooling to handle variable $N_{\text{reps}}$:
+Because labels are provided at the set/video level (not per repetition), we aggregate multiple repetitions from the same volunteer into a single subject-level sample. Each repetition window (a $50 \times 9$ joint-angle sequence) is first encoded into an embedding $e_r \in \mathbb{R}^d$ using the temporal CNN encoder (1D convolutions over time followed by pooling to obtain a fixed-dimensional representation). We then perform masked attention pooling to handle the variable $N_{\text{reps}}$:
 \begin{equation}
 \alpha_r = \frac{m_r \exp(a(e_r))}{\sum_k m_k \exp(a(e_k))}, \qquad
 e_{\text{subj}} = \sum_r \alpha_r e_r,
@@ -461,14 +467,13 @@ where $a(\cdot)$ is a lightweight scoring network and $m_r \in \{0,1\}$ is a bin
 We use a compact temporal CNN (1D convolutions over time) to encode each repetition sequence and produce $e_r$, followed by an aggregation module and a shallow prediction head that outputs five aspect scores. During training, targets are normalized to $[0,1]$ and optimized with mean squared error (MSE). At inference, predictions are rescaled to the original 0--10 range.
 
 \par 
-Two coaches providd scores for a given set, we use a reliability-weighted fusion:
+Two coaches provided scores for a given set, we use a reliability-weighted fusion:
 \begin{equation}
 y = 0.25\,y_{C1} + 0.75\,y_{C2}.
 \end{equation}
 
 \par 
-We train and evaluate the assessment model separately per exercise and per view (front/side) under subject-disjoint splits, and report MAE on the 0--10 scale.\wg{above u mentioned MSE,
-is this the difference between training and testing?? or just a typo?}
+We train and evaluate the assessment model separately per exercise and per view (front/side) under subject-disjoint splits, and report MAE on the 0--10 scale.
 
 
 \section{Experimental Setup}
@@ -477,7 +482,7 @@ is this the difference between training and testing?? or just a typo?}
 \subsection{Data Splitting Protocol}
 
 \par 
-To ensure robust evaluation and prevent data leakage, we employed a \textbf{subject-disjoint} stratified splitting strategy where each participant's data is assigned to exactly one of the train (55\%), validation (15\%), or test (30\%) sets. This partitioning ensures that the model is evaluated on its ability to generalize to completely unseen individuals. Stratification guarantees that all 15 exercise classes are represented in each split, including the held-out test set.
+To ensure robust evaluation and prevent data leakage, we employed a \textbf{subject-disjoint} stratified splitting strategy where each participant's data is assigned to exactly one of the train (55\%), validation (15\%), or test (30\%) sets. This partitioning ensures that the model is evaluated on its ability to generalize to completely unseen individuals. Stratification guarantees that all 15 exercise classes are represented in each split, especially the held-out test set to ensure true generalization test.
 
 \subsection{Multi-Run Evaluation}
 
@@ -528,30 +533,28 @@ The side view outperforms the front view by approximately 3.4\%, as side profile
 
 \textbf{Front View:} Exercises with distinctive postures achieve near-perfect recognition: Dumbbell Shoulder Press (F1 = 0.99), Weighted Squats (0.99), and Incline Bench Press (0.97). The curl discrimination features successfully separate Seated Biceps Curls (F1 = 0.92) and EZ-Bar Curls (0.82) from other curl variants. Remaining challenges include Hammer Curls (F1 = 0.63), which share similar arm positions with other curl variants despite grip differences.
 
-Figs.~\ref{fig:confusion_side} and~\ref{fig:confusion_front} present the aggregated normalized confusion matrices for side and front views respectively, averaged across all 30 runs. Both views show strong diagonal dominance, confirming that the specialized features effectively resolve exercise-specific confusion patterns.
 
-\begin{figure}[H]
+\begin{figure}[htbp]
 \centering
 \includegraphics[width=0.48\textwidth]{confusion_matrix_side.png}
-\caption{Aggregated confusion matrix for exercise recognition (side view, mean across 30 runs, normalized). Strong diagonal indicates robust per-class performance.}
+\caption{Aggregated confusion matrix for exercise recognition on held-out test set (side view, mean across 30 runs, normalized). Strong diagonal indicates robust per-class performance.}
 \label{fig:confusion_side}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[htbp]
 \centering
 \includegraphics[width=0.48\textwidth]{confusion_matrix_front.png}
-\caption{Aggregated confusion matrix for exercise recognition (front view, mean across 30 runs, normalized). More inter-class confusion is visible compared to the side view.}
+\caption{Aggregated confusion matrix for exercise recognition on held-out test set (front view, mean across 30 runs, normalized). More inter-class confusion is visible compared to the side view.}
 \label{fig:confusion_front}
 \end{figure}
 
 
-\FloatBarrier
 \subsection{Assessment Results (Front vs Side)}
 Table~\ref{tab:assessment_mae} reports the assessment Mean Absolute Error (MAE) on the 0--10 scale (lower is better), summarized as mean $\pm$ standard deviation across 10 randomized runs per exercise per view (subject-disjoint splits with best-checkpoint selection per run). Overall, front and side views achieve comparable pooled performance (Front: $3.54 \pm 1.21$, Side: $3.51 \pm 1.26$), suggesting that both viewpoints contain sufficient information for aspect-level scoring in our setting.
 
 Performance varies by exercise and view. For example, \emph{Rows} achieves the lowest MAE in both views ($2.26$ front, $2.14$ side), while more challenging exercises such as \emph{Triceps Kickbacks} and \emph{Deadlift} yield higher MAE (around $4.5$--$4.8$). View dependence is also observable: some movements benefit from side-view kinematics (e.g., \emph{Overhead Triceps Extension}), whereas others are better captured from the front view (e.g., \emph{Incline Dumbbell Bench Press}). The reported standard deviations reflect sensitivity to random splits and the limited number of test subjects per exercise, motivating multi-run reporting for a more reliable estimate of performance.
 
-\begin{table}[!t]
+\begin{table}[h]
 \caption{Exercise assessment MAE (0--10; lower is better), reported as mean $\pm$ std over 10 runs per exercise and view.}
 \label{tab:assessment_mae}
 \centering
@@ -587,14 +590,18 @@ Weighted Squats & $2.98 \pm 0.85$ & $3.10 \pm 1.58$ \\
 \subsection{AI Coaching Agent Qualitative Results}
 
 \par
-To demonstrate the system's ability to synthesize recognition confidence and aspect-level quality scores into actionable natural language advice, we present a qualitative case study. The following output was generated for a 12-rep \textit{Dumbbell Shoulder Press} set where the assessment module detected progressive form degradation due to fatigue.
+\par
+To demonstrate the system's ability to synthesize quantitative metrics into actionable natural language advice, we present a sample of our coaching agent output. Our architecture separates responsibilities to optimize efficiency: the assessment model provides raw per-repetition aspect scores, while the coaching agent employs lightweight rule-based logic to compute derived states (e.g., trend analysis, fatigue detection). This pre-processing step significantly reduces token usage and latency, making the solution viable for production environments by only querying the Large Language Model (LLM) with high-level semantic summaries rather than raw time-series data.
 
 \par
-\textbf{Input Context:}
+The following output was generated for a 12-rep \textit{Dumbbell Shoulder Press} set where the agent's internal logic detected form degradation.
+
+\par
+\textbf{Input Context (Computed by Agent):}
 \begin{itemize}
     \item \textbf{Exercise:} Dumbbell Shoulder Press (Confidence: 92\%)
-    \item \textbf{Aspect Scores:} Elbow Path dropping from 8.5 (initial) to 6.6 (final); Top Position stability decreasing in reps 10--12.
-    \item \textbf{Detected State:} Fatigue Onset.
+    \item \textbf{Aspect Trends:} Elbow Path declining (8.5 $\to$ 6.6); Top Position stability decreasing in reps 10--12.
+    \item \textbf{Derived State:} Fatigue Onset (Logic: Multi-aspect score drop in final 3 reps).
 \end{itemize}
 
 \par
@@ -608,7 +615,7 @@ For your next set, really focus on driving your \textit{elbows straight up}, kee
 \end{quote}
 
 \par
-This example highlights the agent's capacity to: (i) Identify specific error patterns (``elbow path became less vertical''); (ii) Pinpoint temporal occurrences (``reps 10--12''); and (iii) Provide constructive, context-aware utility (``reducing weight'' or ``more rest''). By integrating numerical assessment with domain knowledge, the virtual coach moves beyond simple scoring to provide the pedagogical support typically associated with human trainers.
+This example highlights the agent's capacity to: (i) Identify specific error patterns (``elbow path became less vertical''); (ii) Pinpoint temporal occurrences (``reps 10--12''); and (iii) Provide constructive, context-aware utility (``reducing weight'' or ``more rest''). By integrating numerical assessment with domain knowledge, the virtual coach moves beyond simple scoring to provide the support associated with human trainers.
 
 \FloatBarrier
 \subsection{Discussion}
@@ -625,13 +632,13 @@ Several limitations affect generalization. First, the dataset is small (51 subje
 
 \section{Conclusion}
 \label{sec: Conclusion}
-We presented an AI Virtual Coach system for resistance training that integrates exercise recognition, per-repetition quality assessment, and LLM-based coaching feedback. Our key contribution is a 37-dimensional view-specific feature representation that combines biomechanical joint angles with specialized discrimination features targeting exercise-specific confusion patterns. Using a subject-disjoint evaluation protocol with 30 randomized runs, we achieved 90.36\% macro F1 on side view and 86.94\% macro F1 on front view for 15-class exercise recognition. The assessment module achieves an overall MAE of approximately 3.5 on a 0--10 scale across both views, demonstrating that lightweight pose-based models can provide practical quality feedback from consumer smartphone video.
+We presented an AI Virtual Coach system for resistance training that integrates exercise recognition, per-repetition quality assessment, and LLM-based coaching feedback. Our key contribution is the introduction of a new dataset of 51 volunteers performing 15 resistance-training exercises, enabling the evaluation of aspect-level quality assessment models. Using a subject-disjoint evaluation protocol with 30 randomized runs, we achieved 90.36\% macro F1 on side view and 86.94\% macro F1 on front view for 15-class exercise recognition. The assessment module achieves an overall MAE of approximately 3.5 on a 0--10 scale across both views, demonstrating that lightweight pose-based models can provide practical quality feedback from consumer smartphone video.
 
 \subsection{Limitations}
-Several factors limit the current system's generalizability. The dataset contains only 51 subjects with gender imbalance (80\% male), and the limited number of test subjects per exercise (9--13) leads to high variance in per-class statistics. Some specialized features rely on hand landmark accuracy, which degrades under occlusion or fast motion. Additionally, the assessment module predicts uniform weights across all five aspects, whereas certain aspects (e.g., joint alignment) may be more critical for injury prevention than others.
+The primary limitation is the assessment MAE (approx. 3.5/10), which remains relatively high for fine-grained coaching. Other limitations, including dataset size, gender imbalance, and occlusion sensitivity, are detailed in Section~\ref{sec: Results and Discussion}.
 
 \subsection{Future Work}
-Future directions include: (i) expanding the dataset with more diverse participants and additional exercises; (ii) exploring view fusion strategies to leverage complementary information from front and side cameras; (iii) on-device optimization via TensorFlow Lite and quantization for real-time mobile deployment; and (iv) self-supervised pretraining on unlabeled pose sequences to improve generalization with limited labeled data.
+Future directions include: (i) improving regression performance to separate expert-level nuances; (ii) expanding the dataset with more diverse participants and additional exercises; (iii) exploring view fusion strategies to leverage complementary information from front and side cameras; (iv) on-device optimization via TensorFlow Lite and quantization for real-time mobile deployment; and (v) self-supervised pretraining on unlabeled pose sequences to improve generalization with limited labeled data.
 
 
 \section*{Acknowledgment}
